# nexsqs_useless_ui

./: NUUI_Installer.bat  README.md  nuui_2.0.bat  v3.0 MACRO EXAMPLE.txt
Asci/: U.txt
Misc/: example NUUIv2.0_MacroConfig.txt  example NUUIv2.0_QuickDownloadConfig.txt
custom/: cheat_eng.bat  gen_ip.bat  mouse_crds.bat  whos_on.bat  win_cleanup.bat  x_counter.bat  yt_dwn.bat
misc/: example NUUIv2.0_QuickDownload.txt  example NUUIv3.0_Macro.txt
misc/asci/: Arch.txt  N.txt  NUUI.txt  Ubuntu.txt  Windows.txt
v1.0/: NexsqsUselessUi_v1.0_src.txt  nuui_1-0.bat  nuui_1.0.bat
v2.0/: NexsqsUselessUi_v2.0.bat  nuui_2-0.bat
v3.0/: Cargo.toml  main.rs
v3.0/src/: Cargo.toml  main.rs
v3.0/src/src/: main.rs
v3.0/vscode/: launch.json  tasks.json
